add page for 404

--- a/htdocs/locales/en/translations.json
+++ b/htdocs/locales/en/translations.json
@@ -21,5 +21,8 @@
     "Edit profile": "Edit profile",
     "Followers": "Followers",
     "Logout": "Logout",
-    "There are no offers yet ;(": "There are no offers yet ;("
-} 
+    "There are no offers yet ;(": "There are no offers yet ;(",
+
+    "Ooops! This page does not exist": "Ooops! This page does not exist"
+
+}
