--- a/htdocs/locales/ru/translations.json
+++ b/htdocs/locales/ru/translations.json
@@ -41,6 +41,8 @@
     "New photo": "Добавить фото",
     "Add new topic": "Предложить новую тему",
 
-    "Choose a chat": "Выберите чат"
+    "Choose a chat": "Выберите чат",
+
+    "Ooops! This page does not exist": "Ой! Кажется. такой страницы не существует"
 
 } 
